# PromptCards

./: README.md  promptcard-template.md  pyproject.toml
.github/workflows/: static.yml
app/: app.py
app/prompt/: gilardi-frame-problem-solution-2023.md  gilardi-moderation-relevance-2023.md  gilardi-policy-frames-2023.md  gilardi-stance-detection-2023.md  gilardi-topic-detection-2023.md
app/prompts/: gilardi-stance-detection-2023.md  gilardi-topic-detection-2023.md
prompts/: class-fr-reviews.yaml  gilardi-frame-problem-solution-2023.md  gilardi-moderation-relevance-2023.md  gilardi-policy-frames-2023.md  gilardi-stance-detection-2023.md  gilardi-topic-detection-2023.md  ml-ch-headlines.yaml  ner-en-finance.yaml  political-twitter-messages-toernberg2023.md  pos-sp-news.yaml  test.yaml
public/: freezer.py  main.py
public/prompt/: gilardi-moderation-relevance-2023.md  gilardi-stance-detection-2023.md  gilardi-topic-detection-2023.md
public/templates/: index.html  prompt.html
website/: freezer.py
website/prompt/: gilardi-frame-problem-solution-2023.md  gilardi-moderation-relevance-2023.md  gilardi-policy-frames-2023.md
website/static/: search_filter.js
website/templates/: about.html
